--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -28,14 +28,18 @@
                                 <td>Serviço</td>
                                 <td>Detalhamento</td>
                                 <td>Comentários Clientes</td>
+                                <td>Editar Serviço</td>
+                                <td>Excluir Serviço</td>
                             </tr>
                         </thead>
                         <tbody>
                             <tr th:each="servico: ${lista}">
                                 <td th:text="${servico.id}"></td>
                                 <td th:text="${servico.nomeServico}"></td>
-                                <td th:text="${servico.detalhamento}"></td>
+                                <td th:text="${servico.detalhamento}"></td>  
                                 <td><a th:href="@{'/exibir?id=' + ${servico.id}}">Comentários Clientes</a></td>
+                                <td><a th:href="@{'/editar?id=' + ${servico.id}}">Editar</a></td>
+                                <td><a th:href="@{'/excluir?id=' + ${servico.id}}">Excluir</a></td>
                             </tr>
                         </tbody>
                     </table>
